// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/presenters/ProfileContentPresenter renders with a name 1`] = `
<div
  className="hig__profile-flyout__content"
>
  <div
    className="hig__profile-flyout__content__name"
  >
    Pete Parker
  </div>
</div>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter renders with all props 1`] = `
<div
  className="hig__profile-flyout__content"
>
  <div
    className="hig__profile-flyout__content__name"
  >
    Pete Parker
  </div>
  <div
    className="hig__profile-flyout__content__email"
  >
    spyder-man@autodesk.com
  </div>
  <span />
</div>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter renders with an email 1`] = `
<div
  className="hig__profile-flyout__content"
>
  <div
    className="hig__profile-flyout__content__email"
  >
    spyder-man@autodesk.com
  </div>
</div>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter renders with no props 1`] = `
<div
  className="hig__profile-flyout__content"
/>
`;
